src/app.css
@import "tailwindcss";

@utility squircle {
    border-radius: 32px;
    @supports (corner-shape: squircle) {
        corner-shape: squircle;
        border-radius: 64px;
    }
}

@utility squircle-md {
    border-radius: 24px;
    @supports (corner-shape: squircle) {
        corner-shape: squircle;
        border-radius: 48px;
    }
}

@font-face {
    font-family: "Inter";
    font-style: normal;
    src: url("/fonts/InterVariable.woff2") format("woff2");
}

@font-face {
    font-family: "JetBrains-Mono";
    font-style: normal;
    src: url("/fonts/JetBrainsMonoSemiBold.woff2") format("woff2");
}

code * {
    font-family: "JetBrains-Mono", sans-serif;
}

code > span {
    padding-left: 5px;
}

pre {
    background-color: var(--color-zinc-900);
    border-radius: var(--radius-xl);
    padding: 2px;
}

* {
    font-family: "Inter", sans-serif;
    color: white;
}

h1,
h2,
h3,
p,
a {
    filter: drop-shadow(0px 2px 12px rgba(0, 0, 0, 0.103));
}

h1 {
    font-size: 3rem;
    font-weight: 650;
    line-height: 42px;
    margin-bottom: 12px;
}

h2 {
    font-size: 2rem;
    font-weight: 600;
    line-height: 30px;
    margin-bottom: 6px;
    margin-top: 6px;
}

h3 {
    font-size: 1.2rem;
}

h1,
h2 {
    font-family: "JetBrains-mono", monospace;
    text-transform: lowercase;
    background-color: rgba(0, 0, 0, 0.2);
    height: fit-content;
    width: fit-content;
}

a {
    text-decoration: underline white 1px;
}

p {
    font-size: 1rem;
}

body {
    background-color: var(--color-zinc-800);
    overflow-x: hidden;
    background-repeat: no-repeat;
    min-height: 100vh;
}

li {
    list-style: disc;
    margin-left: 2em;
}

